--- a/posts/socialshare/index.qmd
+++ b/posts/socialshare/index.qmd
@@ -66,21 +66,22 @@ print('<div class="fb-comments" data-href="{}"\n data-width="" data-numposts="5"
  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
  
 <div class="share-buttons">
-<div class="fb-share-button" data-href="https://mrislambd.github.io/posts/social-share/"
+<div class="fb-share-button" data-href="https://mrislambd.github.io/posts/socialshare/"
 data-layout="button_count" data-size="small"><a target="_blank" 
- href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Fsocial-share%2F&amp;src=sdkpreparse" 
+ href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Fsocialshare%2F&amp;src=sdkpreparse" 
  class="fb-xfbml-parse-ignore">Share</a></div>
 
 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
-<script type="IN/Share" data-url="https://mrislambd.github.io/posts/social-share/"></script> 
+<script type="IN/Share" data-url="https://mrislambd.github.io/posts/socialshare/"></script> 
  
 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" 
- data-url="https://mrislambd.github.io/posts/social-share/" data-show-count="true">Tweet</a>
+ data-url="https://mrislambd.github.io/posts/socialshare/" data-show-count="true">Tweet</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 
-<div class="fb-comments" data-href="https://mrislambd.github.io/posts/social-share/"
+<div class="fb-comments" data-href="https://mrislambd.github.io/posts/socialshare/"
  data-width="" data-numposts="5"></div>
+
 
 
   
