--- a/posts/matrixrep/index.qmd
+++ b/posts/matrixrep/index.qmd
@@ -27,26 +27,28 @@ is an ordered basis for $\mathbf{M}_{2\times 2}(\mathbb{R})$
 <p style="text-align: left "></p><div class="separator" style="clear: both  text-align: justify "><span style="text-align: center ">Now if $f(x)=1+x$ then</span></div><div class="separator" style="clear: both  text-align: justify "><span style="text-align: center ">$\alpha(f(x))=\left(\begin{array}{cc}f^{'}(0)& 2f(1)\\0& f^{''}(3)\end{array}\right)$</span></div><div class="separator" style="clear: both  text-align: justify "><br /></div><div class="separator" style="clear: both  text-align: justify "><span style="text-align: center ">$\hspace{1in}=\left(\begin{array}{cc}1& 4\\0& 0\end{array}\right)$</span></div><div class="separator" style="clear: both  text-align: justify "><span style="text-align: center "><br /></span></div><div class="separator" style="clear: both  text-align: justify "><span style="text-align: center ">$\hspace{1in}=\left(\begin{array}{c}1\\4\\0\\0\end{array}\right)$</span></div><div class="separator" style="clear: both  text-align: justify "><span style="text-align: center "><br /></span></div><div class="separator" style="clear: both  text-align: justify "><div class="separator" style="clear: both "><span style="text-align: center ">Now if $f(x)=1-x$ then</span></div><div class="separator" style="clear: both "><span style="text-align: center ">$\alpha(f(x))=\left(\begin{array}{cc}f^{'}(0)& 2f(1)\\0& f^{''}(3)\end{array}\right)$</span></div><div class="separator" style="clear: both "><br /></div><div class="separator" style="clear: both "><span style="text-align: center ">$\hspace{1in}=\left(\begin{array}{cc}-1& 0\\0& 0\end{array}\right)$</span></div><div class="separator" style="clear: both "><span style="text-align: center "><br /></span></div><div class="separator" style="clear: both "><span style="text-align: center ">$\hspace{1in}=\left(\begin{array}{c}-1\\0\\0\\0\end{array}\right)$</span></div><div class="separator" style="clear: both "><span style="text-align: center "><br /></span></div><div class="separator" style="clear: both "><div class="separator" style="clear: both "><span style="text-align: center ">Now if $f(x)=x^2$ then</span></div><div class="separator" style="clear: both "><span style="text-align: center ">$\alpha(f(x))=\left(\begin{array}{cc}f^{'}(0)& 2f(1)\\0& f^{''}(3)\end{array}\right)$</span></div><div class="separator" style="clear: both "><br /></div><div class="separator" style="clear: both "><span style="text-align: center ">$\hspace{1in}=\left(\begin{array}{cc}0& 2\\0& 2\end{array}\right)$</span></div><div class="separator" style="clear: both "><span style="text-align: center "><br /></span></div><div class="separator" style="clear: both "><span style="text-align: center ">$\hspace{1in}=\left(\begin{array}{c}-2\\2\\0\\2\end{array}\right)$</span></div><div class="separator" style="clear: both "><span style="text-align: center "><br /></span></div><div class="separator" style="clear: both "><span style="text-align: center ">because,</span></div><div class="separator" style="clear: both "><span style="text-align: center "><br /></span></div><div class="separator" style="clear: both "><div class="separator" style="clear: both "><span style="text-align: center ">$\left(\begin{array}{cc}0& 2\\0& 2\end{array}\right)$</span><span style="text-align: center ">$=-2\left(\begin{array}{cc}1& 0\\0& 0\end{array}\right)$</span><span style="text-align: center ">$+2\left(\begin{array}{cc}0& 1\\0& 0\end{array}\right)$</span><span style="text-align: center ">$+0\left(\begin{array}{cc}0& 0\\1& 0\end{array}\right)$</span><span style="text-align: center ">$+2\left(\begin{array}{cc}1& 0\\0& 1\end{array}\right)$</span></div><div class="separator" style="clear: both "><span style="text-align: center "><br /></span></div><div class="separator" style="clear: both "><span style="text-align: center ">Therefore, $\phi_{BD}(\alpha)=$</span><span style="text-align: center ">$\left(\begin{array}{ccc}1& -1& -2\\4& 0& 2\\0& 0& 0\\0& 0& 2\end{array}\right)$</span></div><div><span style="text-align: center "><br /></span></div></div></div></div><p></p><br />  
 
 **Share on**  
+
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous"
  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v20.0"></script>
  
 <div class="share-buttons">
-<div class="fb-share-button" data-href="https://mrislambd.github.io/posts/matrix-rep/index.html"
+<div class="fb-share-button" data-href="https://mrislambd.github.io/posts/matrixrep/index.html"
 data-layout="button_count" data-size="small"><a target="_blank" 
- href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Fmatrix-rep%2Findex.html&amp;src=sdkpreparse" 
+ href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmrislambd.github.io%2Fposts%2Fmatrixrep%2Findex.html&amp;src=sdkpreparse" 
  class="fb-xfbml-parse-ignore">Share</a></div>
 
 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
-<script type="IN/Share" data-url="https://mrislambd.github.io/posts/matrix-rep/index.html"></script> 
+<script type="IN/Share" data-url="https://mrislambd.github.io/posts/matrixrep/index.html"></script> 
  
 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" 
- data-url="https://mrislambd.github.io/posts/matrix-rep/index.html" data-show-count="true">Tweet</a>
+ data-url="https://mrislambd.github.io/posts/matrixrep/index.html" data-show-count="true">Tweet</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 
-<div class="fb-comments" data-href="https://mrislambd.github.io/posts/matrix-rep/index.html"
+<div class="fb-comments" data-href="https://mrislambd.github.io/posts/matrixrep/index.html"
  data-width="" data-numposts="5"></div>
+
   
 
 **You may also like**
